[package]
edition = "2021"
name = "anewer"
version = "0.1.6"
authors = ["ysf <ich@youssef.de>"]
description = "anewer appends lines from stdin to a file if they don't already exist in the file. You could also use it as `uniq` without `sort`."
homepage = "https://github.com/ysf/anewer"
repository = "https://github.com/ysf/anewer"
categories = ["command-line-utilities"]
keywords = ["cli", "io", "uniq"]
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
memchr = "2.6"
ahash = "0.8"

[[bin]]
name = "anewer"
test = false
bench = false
